# prowl

./: .gitignore  README.md  pyproject.toml  testbed.py
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.tsx
prowl/: __init__.py  __main__.py  _compat.py  cli.py  session.py
prowl/api/: __init__.py  deps.py  openapi.json  router_control.py  router_crawl.py  router_discovery.py  router_orchestration.py  router_reports.py  schemas.py
prowl/backends/: __init__.py  browser_backend.py  cdp_instrumentor.py  http_backend.py  hybrid_backend.py
prowl/core/: attack_surface.py  auth_utils.py  config.py  context.py  dedup.py  engine.py  exploration.py  infra_signatures.py  protocols.py  rate_limiter.py  request_queue.py  response_classifier.py  scope.py  session_pool.py  signals.py  state_tracker.py  tech_signatures.py
prowl/dashboard/: __init__.py  bridge.py  server.py  state.py
prowl/intervention/: __init__.py  approval.py  browser_bridge.py  interactive.py  manager.py
prowl/llm/: protocols.py  provider.py
prowl/models/: __init__.py  cdp_metrics.py  report.py  request.py  session.py  target.py
prowl/modules/: __init__.py  base.py  s10_tech_fingerprinter.py  s11_input_classifier.py  s12_auth_boundary.py  s13_report_generator.py  s14_cdp_analysis.py  s1_active_spider.py  s2_dir_bruteforce.py  s3_param_discovery.py  s4_js_analysis.py  s4_js_analysis_regex_legacy.py  s5_api_discovery.py  s6_passive_collection.py  s7_auth_crawl.py  s8_state_transitions.py  s9_infra_mapper.py
tests/: test_js_ast_analyzer.py
(+47 files in other folders)
