[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prowl"
version = "0.1.0"
description = "Security Reconnaissance Crawler"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "selectolax>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.20",
    "tree-sitter>=0.23",
    "tree-sitter-javascript>=0.23",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
llm = ["litellm>=1.30"]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
all = ["prowl[browser,llm,dashboard]"]

[project.scripts]
prowl = "prowl.cli:app"
